--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ nav p {
 }
 
 nav a {
-    color:	#c674c6;
+    color: #c674c6;
     text-decoration: none;
 }
 
@@ -56,7 +56,6 @@ nav a:hover {
     font-weight: 400;    
     line-height: 1.5;
 }
-
 
 .splash img {
     border: 5px ridge #330000;
@@ -120,13 +119,21 @@ section dl {
 }
 
 section dl a {
-    color:	#c674c6;
+    color: #e91e63; /* Pink color for links */
     text-decoration: none;
 }
 
 section dl a:hover {
-    text-decoration: underline;
-    font-weight: 700;
+    text-decoration: none;
+    color: #e91e63; /* Maintains pink color on hover */
+}
+
+section dl a:visited {
+    color: #e91e63; /* Maintains pink color after clicking */
+}
+
+section dl a:active {
+    color: #e91e63; /* Maintains pink color when clicking */
 }
 
 section dt {
@@ -198,7 +205,6 @@ form input {
     padding:10px;
     border: 1px solid #330000;
     margin-bottom: 20px;
-
 }
 
 form textarea {
@@ -240,6 +246,10 @@ footer a {
 }
 
 footer a:hover {
-    text-decoration: 
-    underline;
+    text-decoration: underline;
 }
+
+footer a i {
+    font-size: 1.5em;
+}
+
